# DXRenderer

./: .gitignore  CMakeLists.txt  CleanProjectFiles.bat  DXRenderer.sln  GenerateProjectFiles.bat  README.md  vcpkg.json  vcpkg_reference.json
DXRenderer/: CMakeLists.txt  DXRenderer.cpp  DXRenderer.vcxproj  DXRenderer.vcxproj.filters  MainWindow.cpp  MainWindow.h  Shaders.hlsl
Meshes/: Cube.usda  CubeTriangulated.usda  FaceAndTri.blend  FaceAndTri.usda  FaceAndTriTest.usda  Quad.usda  QuadTriangulated.usda  SimpleCube.blend  SimpleQuad.blend  SimpleTriangle.blend  Triangle.usda
Src/: CMakeLists.txt  Camera.cpp  Camera.h  DXRenderer.cpp  ImGuiDescHeap.cpp  ImGuiDescHeap.h  MainWindow.cpp  MainWindow.h  RenderMesh.cpp  RenderMesh.h  Renderer.cpp  Renderer.h  Shaders.hlsl  StaticMeshPipeline.cpp  StaticMeshPipeline.h  UIBase.cpp  UIBase.h  USDReader.cpp  USDReader.h  USDScene.cpp  USDScene.h  pch.h
